<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.warnotte</groupId>
	<artifactId>waxlib3</artifactId>
	<version>0.0.2.6</version>
	<name>Wab Library 3</name>
	<description>This is my 16 years old own library for lot of purpose</description>
	<url>https://github.com/warnotte/WaxLibrary3</url>

	<!-- 
Faut rajouter ça pour Maven dans les paramatre

add-opens java.base/java.lang=ALL-UNNAMED
add-opens java.base/java.util=ALL-UNNAMED
add-opens java.base/java.lang.reflect=ALL-UNNAMED
add-opens java.base/java.text=ALL-UNNAMED
add-opens java.desktop/java.awt.font=ALL-UNNAMED

-->

	<!-- Il faut ajouter ceci dans les paramètre de la VM
	-Dgpg.passphrase=mypassphrase -->
	<!--  https://maven.apache.org/plugins/maven-gpg-plugin/usage.html -->


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>9</maven.compiler.source>
		<maven.compiler.target>9</maven.compiler.target>
	</properties>


	<licenses>
		<license>
			<name>gpl_v3</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Renaud Warnotte</name>
			<email>renaud@warnotte.be</email>
			<organization>Renaud Warnotte</organization>
			<organizationUrl>https://renaud.warnotte.be</organizationUrl>
		</developer>
	</developers>

	<organization>
		<name>Renaud Warnotte</name>
		<url>https://renaud.warnotte.be</url>
	</organization>

	<scm>
		<url>https://github.com/warnotte/WaxLibrary3.git</url>
		<connection>scm:git:github.com/warnotte/WaxLibrary3.git</connection>
		<developerConnection>scm:git:git@github.com:warnotte/WaxLibrary3.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<dependencies>

		<!-- https://mvnrepository.com/artifact/org.swinglabs.swingx/swingx-all -->
		<dependency>
			<groupId>org.swinglabs.swingx</groupId>
			<artifactId>swingx-all</artifactId>
			<version>1.6.5-1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/javax.vecmath/vecmath -->
		<dependency>
			<groupId>javax.vecmath</groupId>
			<artifactId>vecmath</artifactId>
			<version>1.5.2</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/com.miglayout/miglayout -->
		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout-swing</artifactId>
			<version>11.3</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.21</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
		<!-- <dependency> <groupId>log4j</groupId>
		<artifactId>log4j</artifactId> 
			<version>1.2.17</version> </dependency> -->


		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.24.0</version>

		</dependency>


		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.24.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.jdom/jdom -->
		<dependency>
			<groupId>org.jdom</groupId>
			<artifactId>jdom2</artifactId>
			<version>2.0.6.1</version>
		</dependency>

		<!-- test TODO : Check if it's used or not -->
		<!--	<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>2.3.3</version>
		</dependency>

		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.3</version>
			<scope>runtime</scope>
		</dependency>
-->

		<!-- Add this for PDF and SVG export -> Pose un probleme de signature
		avec Maven et prends beaucoup trop de place = DISABLED ! -->
		<!--
		<dependency>
			<groupId>com.github.albfernandez</groupId>
			<artifactId>itext2</artifactId>
			<version>2.2.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-svggen</artifactId>
			<version>1.17</version>
		</dependency>

		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-dom</artifactId>
			<version>1.17</version>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.w3c</groupId>
					<artifactId>dom</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		-->
		<!-- STOP - Add this for PDF and SVG export -->

	</dependencies>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>
				https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<build>
		<plugins>

			<!-- Without that, Log4j2 has problem -->
			<!--<plugin>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.0 </version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							
							
							
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>**/Log4j2Plugins.dat</exclude>
									</excludes>
								</filter>
							</filters>

							<artifactSet>
								<excludes>
									<exclude>classworlds:classworlds</exclude>
									<exclude>junit:junit</exclude>
									<exclude>jmock:*</exclude>
									<exclude>*:xml-apis</exclude>
									<exclude>org.apache.maven:lib:tests</exclude>
									
									<exclude>META-INF /*.SF</exclude>
									<exclude>META-INF/*.DSA</exclude>
									<exclude>META-INF/*.RSA</exclude>
								</excludes>
							</artifactSet>
						</configuration>
					</execution>
				</executions>
			</plugin>-->


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.4.1</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.logging.log4j</groupId>
						<artifactId>
							log4j-transform-maven-shade-plugin-extensions</artifactId>
						<version>0.1.0</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>shade-jar-with-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.logging.log4j.maven.plugins.shade.transformer.Log4j2PluginCacheFileTransformer" />
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Multi-Release>true</Multi-Release>
									</manifestEntries>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<!-- Ne semble pas marcher -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.base/java.util=ALL-UNNAMED
						--add-opens java.base/java.lang.reflect=ALL-UNNAMED
						--add-opens java.base/java.text=ALL-UNNAMED
						--add-opens java.desktop/java.awt.font=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<tagNameFormat>@{project.version}</tagNameFormat>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.shared</groupId>
						<artifactId>maven-invoker</artifactId>
						<version>2.2</version>
					</dependency>
				</dependencies>
			</plugin>

			<!-- Il faut ajouter ceci dans les paramètre de la VM
			-Dgpg.passphrase=mypassphrase -->
			<!--  https://maven.apache.org/plugins/maven-gpg-plugin/usage.html -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>

			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<source>9</source>
					<detectJavaApiLink>false</detectJavaApiLink>
					<additionalparam>-Xdoclint:none</additionalparam>
					<doclint>none</doclint>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.13</version> <!-- Des bug avec les version suivante
				semblent exister -->
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>